<resources>
    <string name="app_name" translatable="false">Thanks4Giving</string>
    <item name="open" type="string">Open</item>
    <item name="close" type="string">Close</item>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_picture">Change picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="user_name">User Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Enter your Address</string>
    <string name="save">Save</string>
    <string name="log_in">Log-in</string>
    <string name="sign_email_hint">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="post_new_item">Post new item</string>
    <string name="description">Description</string>
    <string name="get_address_with_gps_location">Get Address with GPS location</string>
    <string name="take_picture">Take Picture</string>
    <string name="picture_from_gallery">Picture from gallery</string>
    <string name="share">Share</string>
    <string name="comment">Comment...</string>
    <string name="post_comment_btn">Post</string>
    <string name="gender">Gender</string>
    <string name="profile_edit_btn">Edit Profile</string>
    <string name="profile_send_message_btn">Send message</string>
    <string name="sign_up">Sign-up</string>
    <string name="full_name">Full Name</string>
    <string name="sign_password_hint">Password (6 digits or more)</string>
    <string name="confirm_and_sign_up">Confirm And Sign Up</string>
    <string name="welcome_guest">Welcome guest</string>
    <string-array name="categories">
        <item name="Choose Category">Choose Category</item>
        <item name="Electronics">Electronics</item>
        <item name="Furniture">Furniture</item>
        <item name="Sport">Sport</item>
        <item name="Clothes">Clothes</item>
        <item name="Games">Games</item>
    </string-array>
    <string-array name="categories_for_filter">
        <item name="Choose Category">Choose Category</item>
        <item name="All Categories">All Categories</item>
        <item name="Electronics">Electronics</item>
        <item name="Furniture">Furniture</item>
        <item name="Sport">Sport</item>
        <item name="Clothes">Clothes</item>
        <item name="Games">Games</item>
    </string-array>
    <string-array name="times">
        <item name="Time">Time </item>
        <item name="Today">Today</item>
        <item name="Last 3 days">Last 3 days</item>
        <item name="Last week">Last week</item>
        <item name="All posts">All posts</item>
    </string-array>
    <string name="need_permissions">Need permissions to open camera or gallery</string>
    <string name="welcome_back">, Welcome back</string>
    <string name="login_fail">Login failed</string>
    <string name="logged_out">Logged out</string>
    <string name="guest">Guest</string>
    <string name="signup_fail">Sign-up failed</string>
    <string name="hi">"Hi "</string>
    <string name="signup_success">, Sign-up successful</string>
    <string name="home">Home</string>
    <string name="tools">Tools</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="new_post">New Post</string>
    <string name="my_profile">My Profile</string>
    <string name="messages_header" translatable="false">Message Header</string>
    <string name="signature_title" translatable="false">Signature Title</string>
    <string name="reply_title" translatable="false">Reply Title</string>
    <string name="sync_header" translatable="false">Sync Header</string>
    <string name="sync_title" translatable="false">Sync Title</string>
    <string name="attachment_summary_off" translatable="false">Attachment Summer Off</string>
    <string name="attachment_summary_on" translatable="false">Attachment Summer On</string>
    <string name="attachment_title" translatable="false">Attachment Title</string>
    <string name="pref_theme_title" translatable="false">Pref Theme Title</string>
    <string name="pref_theme_summary" translatable="false">Pref Theme Summary</string>
    <string name="loading">Loading data…</string>
    <string name="location_permission">The application must have location permissions</string>
    <string name="attention">Attention</string>
    <string name="must_be_logged">Must be logged in to use this feature</string>
    <string name="no_empty_comment">Cannot post empty comment</string>
    <string name="EditingPost">Editing Post</string>
    <string name="submit_filter">Submit</string>
    <string name="keywordhint">What are you looking for ?</string>
    <string name="cleanfilters">Clean Filters</string>
</resources>