<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/nav_group_screens"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_home"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_home"
            android:title="@string/tools" />
    </group>

    <group
        android:id="@+id/nav_group_share"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/send" />
    </group>

    <group
        android:id="@+id/nav_group_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/nav_group_user"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_user_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>