<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/profile_man"
            app:civ_border_color="#FFF"
            app:civ_border_width="2dp" />

        <Button
            android:id="@+id/edit_profile_picture_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg"
            android:padding="10dp"
            android:text="@string/change_picture"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/pic_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone">

            <Button
                android:id="@+id/change_pic_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg"
                android:drawableLeft="@drawable/ic_camera_alt"
                android:padding="3dp"
                android:text="@string/camera"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/change_pic_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg"
                android:drawableLeft="@drawable/ic_insert_photo"
                android:text="@string/gallery"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_name_tf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="Full Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_profile_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_login"
                android:drawablePadding="10dp"
                android:textColor="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_user_address_tf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_profile_user_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_login"
                android:drawablePadding="10dp"
                android:textColor="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="15dp"
                android:text="@string/male"
                android:textSize="15sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/female"
                android:textSize="15sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_profile_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="Cancel"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            <Button
                android:id="@+id/edit_profile_save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>