<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:layout_gravity="center"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/edit_profile_user_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="1dp"
                    android:src="@drawable/profile_man"
                    app:civ_border_color="#fece2f"
                    app:civ_border_width="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/edit_profile_user_image"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edit_profile_camera_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/take_picture"
                        android:textColor="@color/colorWhite"
                        app:icon="@drawable/ic_camera"
                        app:iconTint="@color/colorWhite" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edit_profile_gallery_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/picture_from_gallery"
                        android:textColor="@color/colorWhite"
                        app:icon="@drawable/ic_gallery"
                        app:iconTint="@color/colorWhite" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_name_tf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="10dp"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_user_address_tf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_user_address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_address_location"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_gender_tf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/gender">

                <AutoCompleteTextView
                    android:id="@+id/edit_profile_gender_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_gender"
                    android:drawablePadding="10dp"
                    android:inputType="none" />

                <!-- android:editable="false" /> Do not Delete! BACKUP -->

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_profile_save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_profile_cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="#00000000"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>